--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         <nav-container>
           <h2>Ndako Yannick</h2>
           <ul class="right">
-            <li><a href="" >Accueil</a></li>
-            <li><a href=#a-propos" >À propos</a></li>
-            <li><a href="#Competences" >Compétences </a></li>
-            <li><a href="#services" >Services</a></li>
-            <li><a href="#projects" >Projets</a></li>
-            <li><a href="#contact" >Contact</a></li>
+            <li><a href="">Accueil</a></li>
+            <li><a href="#a-propos">À propos</a></li>
+            <li><a href="#Competences">Compétences </a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#projects">Projets</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li id="moon"><i class="fa-regular fa-moon"></i></li>
           </ul>
         </nav-container>
@@ -60,7 +60,7 @@
             </ul>
           </div>
           <div class="picture">
-            <img src="" alt="" />
+            <img src="./assets/img/software-developer.jpg" alt="" />
           </div>
           <div class="presentation">
             <h1>
@@ -166,95 +166,141 @@
     </section>
     <section class="services" id="services">
       <div class="services-container">
-        <div class="boite">
-          <div class="boite-container">
-            <span><i class="fa-solid fa-code"></i></span>
-            <h3>
-              Développeur<br />
-              Front-end
-            </h3>
-            <ul class="boite">
-              <li>
-                <i class="fa-regular fa-circle-check"></i>
-                <strong>Web design responsive :</strong> Sites adaptatifs qui
-                s’affichent correctement sur tous les écrans grâce à HTML, CSS
-                et Sass (media queries).
-              </li>
-              <li>
-                <i class="fa-regular fa-circle-check"></i>
-                <strong>Interfaces interactives :</strong> Boutons, menus et
-                formulaires animés avec HTML/CSS/Sass pour rendre l’expérience
-                utilisateur plus vivante.
-              </li>
-              <li>
-                <i class="fa-regular fa-circle-check"></i>
-                <strong>Optimisation SEO :</strong> Utilisation de balises
-                sémantiques, descriptions et code propre pour améliorer la
-                visibilité sur les moteurs de recherche.
-              </li>
-              <li>
-                <i class="fa-regular fa-circle-check"></i>
-                <strong>Accessibilité et UX :</strong> Sites faciles à utiliser
-                pour tous, avec navigation claire, contraste lisible et respect
-                des principes d’expérience utilisateur.
-              </li>
-              <li>
-                <i class="fa-regular fa-circle-check"></i>
-                <strong>UI / UX de base :</strong> Conception d’interfaces
-                cohérentes et organisation intuitive des contenus pour une
-                expérience agréable.
-              </li>
-            </ul>
-          </div>
-          <div class="boite-container">
-            <span><i class="fa-brands fa-uikit"></i></span>
-            <h3>
-              Concepteur<br />
-              UI/UX
-            </h3>
-            <ul class="boite">
-              <li>
-                <i class="fa-regular fa-circle-check"></i> Interfaces intuitives
-              </li>
-              <li>
-                <i class="fa-regular fa-circle-check"></i> Design responsive &
-                Mobile-First
-              </li>
-              <li>
-                <i class="fa-regular fa-circle-check"></i> Expérience
-                utilisateur fluide
-              </li>
-              <li>
-                <i class="fa-regular fa-circle-check"></i> Accessibilité et UX
-              </li>
-            </ul>
-          </div>
-          <div class="boite-container">
-            <span><i class="fa-solid fa-code"></i></span>
-            <h3>
-              Compétences en <br />
-              management digital
-            </h3>
-            <ul class="boite">
-              <li>
-                <i class="fa-regular fa-circle-check"></i> Stratégie digitale et
-                planification de projets web
-              </li>
+        <h2>Services</h2>
+        <p>What i offer</p>
+      </div>
+      <div class="boite">
+        <div class="boite-container">
+          <span><i class="fa-solid fa-code"></i></span>
+          <h3>
+            Développeur<br />
+            Front-end
+          </h3>
+                                 <input type="checkbox" id="toggle">
+<label for="toggle" class="toggle-btn"></label>
+   
+          <ul class="menu">
+            <li>
+             <p>
 
-              <li>
-                <i class="fa-regular fa-circle-check"></i> Marketing digital :
-                SEO, réseaux sociaux et campagnes en ligne
-              </li>
-              <li>
-                <i class="fa-regular fa-circle-check"></i>Analyse de données et
-                suivi des KPI
-              </li>
-              <li>
-                <i class="fa-regular fa-circle-check"></i>Optimisation de
-                l’expérience utilisateur (UX) et parcours client
-              </li>
-            </ul>
-          </div>
+              <i class="fa-regular fa-circle-check"></i>
+              <strong>Web design responsive :</strong> Sites adaptatifs qui
+              s’affichent correctement sur tous les écrans grâce à HTML, CSS et
+              Sass (media queries).
+             </p>
+            </li>
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i>
+              <strong>Interfaces interactives :</strong> Boutons, menus et
+              formulaires animés avec HTML/CSS/Sass pour rendre l’expérience
+              utilisateur plus vivante.
+             </p>
+            </li>
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i>
+              <strong>Optimisation SEO :</strong> Utilisation de balises
+              sémantiques, descriptions et code propre pour améliorer la
+              visibilité sur les moteurs de recherche.
+             </p>
+             </li>
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i>
+              <strong>Accessibilité et UX :</strong> Sites faciles à utiliser
+              pour tous, avec navigation claire, contraste lisible et respect
+              des principes d’expérience utilisateur.
+             </p>
+            </li>
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i>
+              <strong>UI / UX de base :</strong> Conception d’interfaces
+              cohérentes et organisation intuitive des contenus pour une
+              expérience agréable.
+             </p>
+             </li>
+          </ul>
+
+    
+        </div>
+        <div class="boite-container">
+          <span><i class="fa-brands fa-uikit"></i></span>
+          <h3>
+            Concepteur<br />
+            UI/UX
+          </h3>
+          <ul class="boite-contain">
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i> Interfaces intuitives
+             </p>
+            </li>
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i> Design responsive &
+              Mobile-First
+             </p>
+            </li>
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i> Expérience utilisateur
+              fluide
+             </p>
+            </li>
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i> Accessibilité et UX
+             </p>
+             </li>
+          </ul>
+        </div>
+        <div class="boite-container">
+          <span><i class="fa-solid fa-code"></i></span>
+          <h3>
+            Compétences en <br />
+            management digital
+          </h3>
+          <ul class="boite-contain">
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i> Stratégie digitale et
+              planification de projets web
+             </p>
+             </li>
+
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i> Marketing digital :
+              SEO, réseaux sociaux et campagnes en ligne
+              < /p>
+             </li>
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i>Analyse de données et
+              suivi des KPI
+             </p>
+            </li>
+            <li>
+             <p>
+
+              <i class="fa-regular fa-circle-check"></i>Optimisation de
+              l’expérience utilisateur (UX) et parcours client
+             </p>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
@@ -520,7 +566,7 @@
               <a href="#">Portfolio</a>
             </li>
             <li>
-              <a href="#" >Contact</a>
+              <a href="#">Contact</a>
             </li>
             <li>
               <a href="">
