--- a/index.html
+++ b/index.html
@@ -306,12 +306,15 @@
     </section>
     <section class="projects" id="projects">
       <div class="projects-container">
-        <h2>Projets</h2>
-        <p>Quelques-uns de mes derniers travaux</p>
+        <div class="div">
+
+          <h2>Projets</h2>
+          <p>Quelques-uns de mes derniers travaux</p>
+        </div>
         <div class="project-card-container">
           <div class="card-container">
             <div class="img-container">
-              <img src="" alt="" />
+              <img src="./assets/img/programmer.webp" alt="" />
             </div>
             <div class="text">
               <h3>Sites professionnels</h3>
@@ -324,7 +327,7 @@
                   <a
                     href="https://codesage25.github.io/Maquette-site-VINCI-Construction-France/"
                     target="_blank"
-                    >Lien du projet
+                    >Lien du projet <i class="fa-solid fa-arrow-right"></i>
                   </a>
                 </div>
               </div>
@@ -332,7 +335,7 @@
           </div>
           <div class="card-container">
             <div class="img-container">
-              <img src="" alt="" />
+              <img src="./assets/img/programmer.webp" alt="" />
             </div>
             <div class="text">
               <h3>Sites portfolio</h3>
@@ -346,7 +349,7 @@
                     href="https://codesage25.github.io/Maquette-site-VINCI-Construction-France/"
                     target="_blank"
                   >
-                    Lien du projet
+                    Lien du projet <i class="fa-solid fa-arrow-right"></i>
                   </a>
                 </div>
               </div>
@@ -354,7 +357,7 @@
           </div>
           <div class="card-container">
             <div class="img-container">
-              <img src="" alt="" />
+              <img src="./assets/img/programmer.webp" alt="" />
             </div>
             <div class="text">
               <h3>Pages d’atterrissage</h3>
@@ -368,7 +371,7 @@
                     href="https://codesage25.github.io/Maquette-site-VINCI-Construction-France/"
                     target="_blank"
                   >
-                    Lien du projet
+                    Lien du projet <i class="fa-solid fa-arrow-right"></i>
                   </a>
                 </div>
               </div>
@@ -380,34 +383,40 @@
     <section class="mail">
       <div class="mail-container">
         <div class="left-mail">
-          <h3>Nouveau projet ?</h3>
-          <p>
-            Offre spéciale pour mes premiers clients : profitez d’une remise de
-            20 % !
-          </p>
-          <div class="link">
-            <a href="https://wa.me/237690973861" target="_blank">
-              Contactez-moi <i class="fa-regular fa-comment-dots"></i>
-            </a>
+          <div class="left-mail-container">
+
+            <h3>Nouveau projet ?</h3>
+            <p>
+              Offre spéciale pour mes premiers clients : profitez d’une remise de
+              20 % !
+            </p>
+            <div class="link">
+              <a href="https://wa.me/237690973861" target="_blank">
+                Contactez-moi <i class="fa-regular fa-comment-dots"></i>
+              </a>
+            </div>
           </div>
         </div>
         <div class="right-mail">
-          <img src="" alt="" />
+        
         </div>
       </div>
     </section>
     <section class="testimonial">
       <div class="testimonial-container">
-        <h2>Témoignages</h2>
-        <p>
-          Les témoignages ci-dessous sont des clients fictifs à titre d’exemple.
-        </p>
+        <div class="testi">
+
+          <h2>Témoignages</h2>
+          <p>
+            Les témoignages ci-dessous sont des clients fictifs à titre d’exemple.
+          </p>
+        </div>
         <div class="avis">
           <div class="avis-container">
             <div class="containt">
               <div class="upper">
                 <span class="image">
-                  <img src="" alt="" />
+                  <img src="./assets/img/user.png" alt="" />
                 </span>
                 <div class="text">
                   <h5>Malik Asif</h5>
@@ -433,7 +442,7 @@
             <div class="containt">
               <div class="upper">
                 <span class="image">
-                  <img src="" alt="" />
+                  <img src="./assets/img/user.png" alt="" />
                 </span>
                 <div class="text">
                   <h5>Sarah Dupont</h5>
@@ -459,7 +468,7 @@
             <div class="containt">
               <div class="upper">
                 <span class="image">
-                  <img src="" alt="" />
+                 <img src="./assets/img/user.png" alt="" />
                 </span>
                 <div class="text">
                   <h5>Lucas Martin</h5>
@@ -486,7 +495,7 @@
             <div class="containt">
               <div class="upper">
                 <span class="image">
-                  <img src="" alt="" />
+                   <img src="./assets/img/user.png" alt="" />
                 </span>
                 <div class="text">
                   <h5>Élise Bernard</h5>
@@ -512,8 +521,11 @@
     </section>
     <section class="contact-me" id="contact">
       <div class="contact-me-container">
-        <h2>Contactez-moi</h2>
-        <p>Parlons de votre projet et concrétisons vos idées !</p>
+        <div class="contact">
+
+          <h2>Contactez-moi</h2>
+          <p>Parlons de votre projet et concrétisons vos idées !</p>
+        </div>
         <div class="container">
           <div class="uper">
             <div class="uper-container">
@@ -521,7 +533,7 @@
                 <i class="fa-regular fa-envelope"></i>
               </div>
               <div class="uper-right">
-                <h5>Courriel</h5>
+                <h5>Email</h5>
                 <p>
                   <a
                     href="https://mail.google.com/mail/?view=cm&fs=1&to=yannickndako@gmail.com"
