--- a/index.html
+++ b/index.html
@@ -49,19 +49,25 @@
           <div class="social">
             <ul>
               <li>
-                <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://wa.me/237690973861" target="_blank"
+                  ><i class="fa-brands fa-whatsapp"></i
+                ></a>
               </li>
               <li>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a
+                  href="https://www.instagram.com/ndako.yannick/"
+                  target="_blank"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
               </li>
               <li>
-                <a href=""><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/CodeSage25" target="_blank"
+                  ><i class="fa-brands fa-github"></i
+                ></a>
               </li>
             </ul>
           </div>
-          <div class="picture">
-            <img src="./assets/img/software-developer.jpg" alt="" />
-          </div>
+          <div class="picture"></div>
           <div class="presentation">
             <h1>
               Bonjour, je m’appelle <br />
@@ -167,7 +173,7 @@
     <section class="services" id="services">
       <div class="services-container">
         <h2>Services</h2>
-        <p>What i offer</p>
+        <p>Mes services</p>
       </div>
       <div class="boite">
         <div class="boite-container">
@@ -176,58 +182,51 @@
             Développeur<br />
             Front-end
           </h3>
-                                 <input type="checkbox" id="toggle">
-<label for="toggle" class="toggle-btn"></label>
-   
+          <input type="checkbox" id="toggle" />
+          <label for="toggle" class="toggle-btn"></label>
+
           <ul class="menu">
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i>
-              <strong>Web design responsive :</strong> Sites adaptatifs qui
-              s’affichent correctement sur tous les écrans grâce à HTML, CSS et
-              Sass (media queries).
-             </p>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong>Développement front-end adaptatif :</strong> Sites
+                adaptatifs qui s’affichent correctement sur tous les écrans
+                grâce à HTML, CSS et Sass (media queries).
+              </p>
             </li>
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i>
-              <strong>Interfaces interactives :</strong> Boutons, menus et
-              formulaires animés avec HTML/CSS/Sass pour rendre l’expérience
-              utilisateur plus vivante.
-             </p>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong> Interfaces interactives : </strong>
+                Boutons, menus et formulaires animés avec HTML/CSS/Sass pour
+                rendre l’expérience utilisateur plus vivante.
+              </p>
             </li>
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i>
-              <strong>Optimisation SEO :</strong> Utilisation de balises
-              sémantiques, descriptions et code propre pour améliorer la
-              visibilité sur les moteurs de recherche.
-             </p>
-             </li>
-            <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i>
-              <strong>Accessibilité et UX :</strong> Sites faciles à utiliser
-              pour tous, avec navigation claire, contraste lisible et respect
-              des principes d’expérience utilisateur.
-             </p>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong>Optimisation SEO :</strong> Utilisation de balises
+                sémantiques, descriptions et code propre pour améliorer la
+                visibilité sur les moteurs de recherche.
+              </p>
             </li>
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i>
-              <strong>UI / UX de base :</strong> Conception d’interfaces
-              cohérentes et organisation intuitive des contenus pour une
-              expérience agréable.
-             </p>
-             </li>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong>Accessibilité et UX :</strong> Sites faciles à utiliser
+                pour tous, avec navigation claire, contraste lisible et respect
+                des principes d’expérience utilisateur.
+              </p>
+            </li>
+            <li>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong> UI / UX de base : </strong>
+                Conception d’interfaces cohérentes et organisation intuitive des
+                contenus pour une expérience agréable.
+              </p>
+            </li>
           </ul>
-
-    
         </div>
         <div class="boite-container">
           <span><i class="fa-brands fa-uikit"></i></span>
@@ -237,68 +236,69 @@
           </h3>
           <ul class="boite-contain">
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i> Interfaces intuitives
-             </p>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong> Interfaces intuitives </strong>
+              </p>
             </li>
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i> Design responsive &
-              Mobile-First
-             </p>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong> Design responsive & Mobile-First </strong>
+              </p>
             </li>
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i> Expérience utilisateur
-              fluide
-             </p>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong> Expérience utilisateur fluide </strong>
+              </p>
             </li>
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i> Accessibilité et UX
-             </p>
-             </li>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong> Accessibilité et UX </strong>
+              </p>
+            </li>
           </ul>
         </div>
         <div class="boite-container">
-          <span><i class="fa-solid fa-code"></i></span>
+          <span><i class="fa-solid fa-lightbulb"></i></span>
           <h3>
             Compétences en <br />
             management digital
           </h3>
           <ul class="boite-contain">
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i> Stratégie digitale et
-              planification de projets web
-             </p>
-             </li>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong>
+                  Stratégie digitale et planification de projets web
+                </strong>
+              </p>
+            </li>
 
             <li>
-             <p>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong> Marketing digital : </strong>
+                SEO, réseaux sociaux et campagnes en ligne
+              </p>
+            </li>
 
-              <i class="fa-regular fa-circle-check"></i> Marketing digital :
-              SEO, réseaux sociaux et campagnes en ligne
-              < /p>
-             </li>
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i>Analyse de données et
-              suivi des KPI
-             </p>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong> Analyse de données et suivi des KPI </strong>
+              </p>
             </li>
             <li>
-             <p>
-
-              <i class="fa-regular fa-circle-check"></i>Optimisation de
-              l’expérience utilisateur (UX) et parcours client
-             </p>
+              <p>
+                <i class="fa-regular fa-circle-check"></i>
+                <strong>
+                  Optimisation de l’expérience utilisateur (UX) et parcours
+                  client
+                </strong>
+              </p>
             </li>
           </ul>
         </div>
@@ -307,20 +307,20 @@
     <section class="projects" id="projects">
       <div class="projects-container">
         <div class="div">
-
           <h2>Projets</h2>
           <p>Quelques-uns de mes derniers travaux</p>
         </div>
         <div class="project-card-container">
           <div class="card-container">
             <div class="img-container">
-              <img src="./assets/img/programmer.webp" alt="" />
+              <img src="./assets//img/Screenshotvinci.webp" alt="" />
             </div>
             <div class="text">
-              <h3>Sites professionnels</h3>
+              <h3>Refonte de la maquette Vinci Construction</h3>
               <p>
-                Sites dynamiques qui reflètent votre marque et séduisent vos
-                clients.
+                Reproduction fidèle au pixel près du site officiel de Vinci
+                Construction, intégrée avec HTML, CSS et Sass, démontrant mes
+                compétences en design adaptatif et intégration front-end.
               </p>
               <div class="link">
                 <div class="link-container">
@@ -335,18 +335,19 @@
           </div>
           <div class="card-container">
             <div class="img-container">
-              <img src="./assets/img/programmer.webp" alt="" />
+              <img src="./assets/img/Screenshot-resto.webp" alt="" />
             </div>
             <div class="text">
-              <h3>Sites portfolio</h3>
+              <h3>Reproduction de la maquette The Resto</h3>
               <p>
-                Sites portfolio qui valorisent votre travail avec une expérience
-                utilisateur fluide.
+                Reproduction fidèle du site The Resto, réalisée avec HTML, CSS
+                et Sass, mettant en avant mes compétences en design responsive
+                et intégration front-end soignée.
               </p>
               <div class="link">
                 <div class="link-container">
                   <a
-                    href="https://codesage25.github.io/Maquette-site-VINCI-Construction-France/"
+                    href="https://codesage25.github.io/The-resto/"
                     target="_blank"
                   >
                     Lien du projet <i class="fa-solid fa-arrow-right"></i>
@@ -357,18 +358,19 @@
           </div>
           <div class="card-container">
             <div class="img-container">
-              <img src="./assets/img/programmer.webp" alt="" />
+              <img src="./assets/img/Screenshot-helium.webp" alt="" />
             </div>
             <div class="text">
-              <h3>Pages d’atterrissage</h3>
+              <h3>Reproduction de la maquette Helium</h3>
               <p>
-                Pages d’atterrissage qui génèrent des conversions et séduisent
-                votre audience.
+                Maquette fidèle du site Helium réalisée avec HTML, CSS et Sass,
+                démontrant mes compétences en design responsive, intégration
+                pixel-perfect et organisation du contenu.
               </p>
               <div class="link">
                 <div class="link-container">
                   <a
-                    href="https://codesage25.github.io/Maquette-site-VINCI-Construction-France/"
+                    href="https://codesage25.github.io/maquette-helium/"
                     target="_blank"
                   >
                     Lien du projet <i class="fa-solid fa-arrow-right"></i>
@@ -380,15 +382,14 @@
         </div>
       </div>
     </section>
-    <section class="mail">
+    <section class="mail" id="mail">
       <div class="mail-container">
         <div class="left-mail">
           <div class="left-mail-container">
-
             <h3>Nouveau projet ?</h3>
             <p>
-              Offre spéciale pour mes premiers clients : profitez d’une remise de
-              20 % !
+              Offre spéciale pour mes premiers clients : profitez d’une remise
+              de 20 % !
             </p>
             <div class="link">
               <a href="https://wa.me/237690973861" target="_blank">
@@ -397,18 +398,16 @@
             </div>
           </div>
         </div>
-        <div class="right-mail">
-        
-        </div>
+        <div class="right-mail"></div>
       </div>
     </section>
     <section class="testimonial">
       <div class="testimonial-container">
         <div class="testi">
-
           <h2>Témoignages</h2>
           <p>
-            Les témoignages ci-dessous sont des clients fictifs à titre d’exemple.
+            Les témoignages ci-dessous sont des clients fictifs à titre
+            d’exemple.
           </p>
         </div>
         <div class="avis">
@@ -416,7 +415,7 @@
             <div class="containt">
               <div class="upper">
                 <span class="image">
-                  <img src="./assets/img/user.png" alt="" />
+                  <img src="./assets/img/usermenfull.webp" alt="" />
                 </span>
                 <div class="text">
                   <h5>Malik Asif</h5>
@@ -442,7 +441,7 @@
             <div class="containt">
               <div class="upper">
                 <span class="image">
-                  <img src="./assets/img/user.png" alt="" />
+                  <img src="./assets/img/user woman.webp" alt="" />
                 </span>
                 <div class="text">
                   <h5>Sarah Dupont</h5>
@@ -468,7 +467,7 @@
             <div class="containt">
               <div class="upper">
                 <span class="image">
-                 <img src="./assets/img/user.png" alt="" />
+                  <img src="./assets/img/user-men.webp" alt="" />
                 </span>
                 <div class="text">
                   <h5>Lucas Martin</h5>
@@ -495,7 +494,7 @@
             <div class="containt">
               <div class="upper">
                 <span class="image">
-                   <img src="./assets/img/user.png" alt="" />
+                  <img src="./assets/img/user.png" alt="" />
                 </span>
                 <div class="text">
                   <h5>Élise Bernard</h5>
@@ -522,7 +521,6 @@
     <section class="contact-me" id="contact">
       <div class="contact-me-container">
         <div class="contact">
-
           <h2>Contactez-moi</h2>
           <p>Parlons de votre projet et concrétisons vos idées !</p>
         </div>
@@ -554,7 +552,14 @@
               </div>
               <div class="uper-right">
                 <h5>Linkedin</h5>
-                <p>Déteri</p>
+                <p>
+                  <a
+                    href="www.linkedin.com/in/ndako-yannick"
+                    target="_blank"
+                  >
+                  Ndako Yannick
+                  </a>
+                </p>
               </div>
             </div>
           </div>
@@ -578,7 +583,7 @@
               <a href="#">Portfolio</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="#mail">Contact</a>
             </li>
             <li>
               <a href="">
