--- a/index.html
+++ b/index.html
@@ -586,17 +586,17 @@
               <a href="#mail">Contact</a>
             </li>
             <li>
-              <a href="">
+              <a href="https:/www.linkedin.com/in/ndako-yannick" target="_blank">
                 <i class="fa-brands fa-linkedin-in"></i>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="https://github.com/CodeSage25" target="_blank"">
                 <i class="fa-brands fa-github"></i>
               </a>
             </li>
             <li>
-              <a href="">
+              <a href="https://www.instagram.com/ndako.yannick/" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
               </a>
             </li>
