--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div class="download">
             <!-- lien qui force le téléchargement et garde un nom de fichier lisible -->
             <a
-              href="/assets/CV_Ndako_Yannick.pdf"
+              href="/./assets/folder/CV Portfolio.pdf"
               download="CV_Ndako_Yannick.pdf"
               class="btn-download"
               aria-label="Download Resume"
@@ -554,7 +554,7 @@
                 <h5>Linkedin</h5>
                 <p>
                   <a
-                    href="www.linkedin.com/in/ndako-yannick"
+                    href="https:/www.linkedin.com/in/ndako-yannick"
                     target="_blank"
                   >
                   Ndako Yannick
